[gd_scene load_steps=4 format=3 uid="uid://vs6awfriwsw7"]

[ext_resource type="Script" path="res://Scripts/Gun.gd" id="1_6q1rc"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="1_bi2yb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_datl5"]
radius = 900.0

[node name="Gun" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6q1rc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_datl5")

[node name="Pivot" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="Pivot"]
position = Vector2(98, 0)
texture = ExtResource("1_bi2yb")

[node name="ShootingPoint" type="Marker2D" parent="Pivot/Pistol"]
unique_name_in_owner = true
position = Vector2(25, -11)

[node name="BulletShootTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="BulletShootTimer" to="." method="_on_bullet_shoot_timer_timeout"]
